--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal do Saber - Login</title>
     <link rel="stylesheet" href="/public/styles/style_login.css">
 </head>
+
 <body>
     <div id="container">
         <form class="login-form" action="/login" method="POST">
             <h1 class="login-titulo">Portal do Saber</h1>
             <h3 class="login-subtitulo">Login</h3>
+
+            <!-- Mensagem de erro -->
+            <div id="error-message" style="color: red;"></div>
+
             <div class="input-caixa">
                 <input type="text" name="cpf" id="cpf" placeholder="CPF">
             </div>
@@ -20,5 +26,17 @@
             <button class="login-button" type="submit">Acessar</button>
         </form>
     </div>
+
+    <script>
+        // Capturar o erro da URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const error = urlParams.get('error');
+        
+        // Se houver uma mensagem de erro, exiba-a
+        if (error) {
+            document.getElementById('error-message').innerText = error;
+        }
+    </script>
 </body>
+
 </html>
